--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,18 @@
 <% provide(:title, 'About Us') %>
+<div class="about-us">
+  <h1>אופן השימוש באתר</h1>
+  <ul>
+  <li>אתר SwapArt נועד לקשר בין אנשים שרוצים להחליף תמונות קיר.</li>
+  <li>האתר מאפשר למשתמש להעלות את תמונות הקיר שברצונו להחליף עם משתמשים אחרים באתר.</li>
+  <li>המשתמש בוחר מתוך גלריית תמונות הקיר להחלפה את התמונות אותן רוצה להחליף בתמורה לתמונות שלו.</li>
+  <li>במידה ושני משתמשים מעוניינים בהחלפה של תמונות הקיר שלהם, תינתן לשניהם האפשרות לראות את פרטי ההתקשרות אחד של השני.</li>
+  </ul>
 
-<h1>אופן ותנאי השימוש באתר</h1>
-<p>בלה בלה</p>
+  <h1>תנאי השימוש באתר</h1>
+  <ul>
+  <li>אנחנו נעשה כל מאמץ למנוע תוכן פוגעני או לא ראוי המוזן על ידי המשתמשים בטקסט או בתמונה. עם זאת, האתר אינו אחראי לתוכן המוזן על ידי המשתמשים, והשימוש באתר הינו אך ורק על אחריותו של המשתמש.</li>
+  <li>אנו מתחייבים שלא להעביר את פרטי המשתמשים לשום גורם צד שלישי. זאת פרט, כמובן, לפרטי המשתמש המוצגים בעת ביצוע החלפה עם משתמש אחר.</li>
+  <li>אין האתר אחראי על נכונות המידע המוזן על ידי משתמשי האתר.</li>
+  <li>האתר שומר לעצמו את הזכות לחסום גישה למשתמשים אשר יעשו שימוש בלתי הולם באתר.</li>
+  </ul>
+</div>
