added contact email

--- a/app/views/layouts/_navigation_footer.html.erb
+++ b/app/views/layouts/_navigation_footer.html.erb
@@ -5,6 +5,6 @@
     <%= link_to "אודות", about_path %></li>
     &bull;
     <span>מה אהבתם? מה חסר?</span>
-    <a href="mailto:email@andreii.com">שלחו לנו מייל</a>
+    <a href="mailto:contact@swapart.co">שלחו לנו מייל</a>
   </p>
 </footer>
