disabling want_toggle buttons when clicked

--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -32,9 +32,9 @@
         <%= link_to "", locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-danger pull-left fa fa-trash-o" %>
       <% else %>
         <% if locals[:state] == 2 || locals[:state] == 4  %>
-          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-success fa fa-thumbs-up" %>
+          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-success toggle_want fa fa-thumbs-up" %>
         <% else %>
-          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-default fa fa-thumbs-up" %>
+          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up" %>
         <% end %>
       <% end %>
       <% if locals[:state] == 4 %>
