--- a/app/views/layouts/_navigation_top.html.erb
+++ b/app/views/layouts/_navigation_top.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to site_name, site_url, class: "navbar-brand" %>
+      <%= link_to " " + site_name, site_url, class: "navbar-brand fa fa-home" %>
     </div>
 
     <div class="collapse navbar-collapse">
