added date to item and sorting the gallry by date

--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -11,6 +11,7 @@
       <% else %>
         <%= link_to "", apply_blocks_path(block: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-danger thumbnail_close fa fa-times" %>
       <% end %>
+      <p class="text-center item-date"> <%= locals[:item].created_at.strftime("%d.%m.%Y") %> </p>
       <img src= <%= S3_PATH + locals[:item].image_url %> alt="" class="center-block">
     </div>
     <div class="caption">
