--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -56,9 +56,16 @@
   position: absolute;
   font-weight: bold;
   color: #222222;
-  background-color: #eeeeee;
-  padding: 2px;
-  opacity: 0.8;
+  margin-bottom: 0;
+  //  background-color: #eeeeee;
+//  padding: 2px;
+//  opacity: 0.8;
+}
+
+.item-date {
+  font-weight: bold;
+  color: #222222;
+  margin-bottom: 0;
 }
 
 .thumbnail_close, .toggle_active {
