--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -15,7 +15,15 @@
           <% if page_index+1 == @page_number %>
             <li class="active"><a href="" class="pagination-button inactiveLink"><%= page_index+1 %></a></li>
           <% else %>
-            <li><a href="<%= request.original_url[0..request.original_url.index('page=')-1] + 'page=' + (page_index+1).to_s %>" class="pagination-button"><%= page_index+1 %></a></li>
+            <% if request.original_url.index('page=').present? %>
+              <li><a href="<%= request.original_url[0..request.original_url.index('page=')-1] + 'page=' + (page_index+1).to_s %>" class="pagination-button"><%= page_index+1 %></a></li>
+            <% else %>
+              <% if request.original_url[-1] == '/' %>
+                <li><a href="<%= request.original_url + '?page=' + (page_index+1).to_s %>" class="pagination-button"><%= page_index+1 %></a></li>
+              <% else %>
+                <li><a href="<%= request.original_url + '&page=' + (page_index+1).to_s %>" class="pagination-button"><%= page_index+1 %></a></li>
+              <% end %>
+            <% end %>
           <% end %>
         <% end %>
       </ul>
