--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -19,7 +19,7 @@
       <p class="long-description"><%= locals[:item].type.description %> במצב   <%= locals[:item].state.description %> נקנה לפני  <%= locals[:item].age.description %> ב<%= locals[:item].price.description %></p>
       <br/><br/>
       <p class="user_name">
-      <% if locals[:item].user == current_user || (locals[:item].user.items.length == 1 && locals[:state] < 3 )%>
+      <% if locals[:item].user == current_user || current_user.items.count == 0 || (locals[:item].user.items.length == 1 && locals[:state] < 3 )%>
         <%= locals[:item].user.first_name %> (<%= locals[:item].user.region.description %>)
       <% else %>
         <%= link_to "%s (%s)" % [locals[:item].user.first_name, locals[:item].user.region.description], modal_users_path(user_id: locals[:item].user_id), format: :json, remote: true, :class => "user_modal_link" %>
@@ -32,10 +32,14 @@
         <%= link_to "", edit_item_path(locals[:item]), :class => "btn btn-info fa fa-edit" %>
         <%= link_to "", locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-danger pull-left fa fa-trash-o" %>
       <% else %>
-        <% if locals[:state] == 2 || locals[:state] == 4  %>
-          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-success toggle_want fa fa-thumbs-up" %>
+        <% if current_user.items.count == 0 %>
+          <%= link_to "", '', :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up no-items" %>
         <% else %>
-          <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up" %>
+          <% if locals[:state] == 2 || locals[:state] == 4  %>
+            <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-success toggle_want fa fa-thumbs-up" %>
+          <% else %>
+            <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up" %>
+          <% end %>
         <% end %>
       <% end %>
       <% if locals[:state] == 4 %>
