alert when no items

--- a/app/views/items/_item_block.html.erb
+++ b/app/views/items/_item_block.html.erb
@@ -33,7 +33,7 @@
         <%= link_to "", locals[:item], method: :delete, data: { confirm: t('areYouSure') }, :class => "btn btn-danger pull-left fa fa-trash-o" %>
       <% else %>
         <% if current_user.items.count == 0 %>
-          <%= link_to "", '', :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up no-items" %>
+          <%= link_to "", '#', :class => "btn btn-large btn-default toggle_want fa fa-thumbs-up no-items" %>
         <% else %>
           <% if locals[:state] == 2 || locals[:state] == 4  %>
             <%= link_to "", toggle_wants_path(want: {item_id: locals[:item].id}), format: :json, remote: true, method: :post, :class => "btn btn-large btn-success toggle_want fa fa-thumbs-up" %>
