still working on the filtering

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -86,3 +86,16 @@ h2 {
     color: mintcream;
   }
 }
+
+#FilterModal .filter-title {
+  display: inline-block;
+  width: 60px;
+}
+
+#FilterModal .filter-subject label {
+  width: 100px;
+}
+
+#FilterModal .filter-subject {
+  padding-right: 5px;
+}
