--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -57,9 +57,7 @@
   font-weight: bold;
   color: #222222;
   margin-bottom: 0;
-  //  background-color: #eeeeee;
-//  padding: 2px;
-//  opacity: 0.8;
+  padding-left: 2px;
 }
 
 .item-date {
