coloring the filters

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -99,3 +99,12 @@ h2 {
 #FilterModal .filter-subject {
   padding-right: 5px;
 }
+
+#FilterModal .modal-body{
+  .btn.active, .btn:active {
+    background-color: forestgreen;
+  }
+  .btn, .btn {
+    background-color: indianred;
+  }
+}
