--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -125,7 +125,7 @@
                 </label>
                 <label class="btn btn-primary <% if params[:time] == '3' %> active <% end %>">
                   <input type="radio" data-filter_subject="time" data-filter_id="3" name="options" id="option2" <% if params[:time] == '3' %> checked <% end %>> חודש
-                </label>
+                </label><div class="clearfix visible-xs-block"></div>
                 <label class="btn btn-primary <% if params[:time] == '2' %> active <% end %>">
                   <input type="radio" data-filter_subject="time" data-filter_id="2" name="options" id="option3" <% if params[:time] == '2' %> checked <% end %>> שבוע
                 </label>
