--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -12,7 +12,7 @@
             <%= f.input :current_password, :required => true %>
         <% end %>
 
-        <div class="clearfix"></div>
+        <div class="clearfix hidden-xs"></div>
         <br/>
 
         <%= f.button :submit, t('helpers.submit.user.update'), :class => 'btn-primary' %>
