--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 
     <%= render "shared/page_title", page_title: t('devise.registrations.sign_up') %>
     <%= render 'devise/registrations/form' %>
-    <a href="/users/auth/facebook"><%= t('sign_in.facebook_link') %></a><br />
+    <a href="/users/auth/facebook"><%= t('sign_in.facebook_link') %></a><div class="clearfix"></div>
 
     <%= render "devise/shared/links" %>
 
