--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,7 +1,7 @@
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to t('sign_in.forgot_password'), new_password_path(resource_name) %><br />
+  <%= link_to t('sign_in.forgot_password'), new_password_path(resource_name) %><div class="clearfix"></div>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to t('sign_in.no_confirmation_email'), new_confirmation_path(resource_name) %><br />
+  <%= link_to t('sign_in.no_confirmation_email'), new_confirmation_path(resource_name) %><div class="clearfix"></div>
 <% end -%>
