--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,13 +6,14 @@
       <%= f.association :user, label_method: :full_name, value_method: :id %>
       <%= f.input :is_active %>
       <%= f.input :is_blocked %>
-    <% end %>
+  <% end %>
     <% if @item.image_url.present? %>
-      <%= f.label :update_image_url %>
-    <% else %>
-      <%= f.label :image_url %>
-    <% end %>
-    <%= f.file_field :image_url %>
+      <button type="button" class="btn btn-primary" id="file_upload_btn"><%= t('simple_form.labels.item.update_image_url') %></button>
+  <% else %>
+      <button type="button" class="btn btn-primary" id="file_upload_btn"><%= t('simple_form.labels.item.image_url') %></button>
+  <% end %>
+
+    <%= f.file_field :image_url, class: 'hidden', id: 'file_upload' %>
     <%= f.input :description, input_html: { maxlength: 30 } %> <div class="clearfix"></div>
     <%= f.association :type, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11  %>
     <%= f.association :price, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11 %><div class="clearfix"></div>
