--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p style="direction: rtl">שלום <%= @email %>!</p>
+<p style="direction: rtl">שלום <%= @user.first_name %>!</p>
 
 <p style="direction: rtl">באפשרותך לאשר את הרישום לאתר בלחיצה על הלינק הבא:</p>
 
