--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p style="direction: rtl">שלום <%= @email %>!</p>
+<p style="direction: rtl">שלום <%= @user.first_name %>!</p>
 
 <p style="direction: rtl">התקבלה בקשה לשינוי הסיסמא שלך. ניתן לעשות זאת על ידי לחיצה על הלינק הבא:</p>
 
