--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<p style="direction: rtl">שלום <%= @email %>!</p>
+<p style="direction: rtl">שלום <%= @user.first_name %>!</p>
 
 <p style="direction: rtl">חשבונך ננעל עקב מספר רב של ניסיונות לחיבור</p>
 
