--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.hidden_field :reset_password_token %>
   <%= f.input :password, :required => true, :autofocus => true %>
   <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Change my password', :class => 'btn-primary' %>
+  <%= f.button :submit, 'שנה את הסיסמא', :class => 'btn-primary' %>
 <% end %>
 <%= render "devise/shared/links" %>
 
