clickable phone number

--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -74,7 +74,7 @@
           <h3>גר ב<span class="region"></span></h3>
           <hr />
           <h3><a class="user_email"></a></h3>
-          <h3 class="user_phone"></h3>
+          <h3 class="user_phone"><a href="tel:"></a></h3>
         </div>
       </div>
       <div class="modal-footer">
