updated about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,9 +10,11 @@
 
   <h1>תנאי השימוש באתר</h1>
   <ul>
+  <li>השימוש באתר הינו ללא כל תשלום.</li>
   <li>אנחנו נעשה כל מאמץ למנוע תוכן פוגעני או לא ראוי המוזן על ידי המשתמשים בטקסט או בתמונה. עם זאת, האתר אינו אחראי לתוכן המוזן על ידי המשתמשים, והשימוש באתר הינו אך ורק על אחריותו של המשתמש.</li>
   <li>אנו מתחייבים שלא להעביר את פרטי המשתמשים לשום גורם צד שלישי. זאת פרט, כמובן, לפרטי המשתמש המוצגים בעת ביצוע החלפה עם משתמש אחר.</li>
   <li>אין האתר אחראי על נכונות המידע המוזן על ידי משתמשי האתר.</li>
   <li>האתר שומר לעצמו את הזכות לחסום גישה למשתמשים אשר יעשו שימוש בלתי הולם באתר.</li>
+  <li>האתר לא יעשה כל שימוש במידע או התמונות המועלים על ידי גולשי האתר, פרט להצגתם באתר.</li>
   </ul>
 </div>
