--- a/app/views/layouts/_navigation_top.html.erb
+++ b/app/views/layouts/_navigation_top.html.erb
@@ -7,6 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <img alt="SwapArt" src="/assets/logo.png" class="navbar-brand" height="80px" />
       <%= link_to " " + site_name, site_url, class: "navbar-brand fa fa-home" %>
     </div>
 
