--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,29 +6,31 @@
       <%= f.association :user, label_method: :full_name, value_method: :id %>
       <%= f.input :is_active %>
       <%= f.input :is_blocked %>
-  <% end %>
+    <% end %>
     <% if @item.image_url.present? %>
-      <button type="button" class="btn btn-info" id="file_upload_btn"><%= t('simple_form.labels.item.update_image_url') %></button>
-  <% else %>
-      <button type="button" class="btn btn-info" id="file_upload_btn"><%= t('simple_form.labels.item.image_url') %></button>
-  <% end %>
+        <button type="button" class="btn btn-info" id="file_upload_btn"><%= t('simple_form.labels.item.update_image_url') %></button>
+    <% else %>
+        <button type="button" class="btn btn-warning" id="file_upload_btn"><%= t('simple_form.labels.item.image_url') %></button>
+    <% end %>
 
     <%= f.file_field :image_url, class: 'hidden', id: 'file_upload' %>
     <%= f.input :description, input_html: { maxlength: 30 } %> <div class="clearfix"></div>
-    <%= f.association :type, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11  %>
-    <%= f.association :price, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11 %><div class="clearfix"></div>
+    <%= f.association :type, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, default: 11  %>
+    <%= f.association :price, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, default: 11 %><div class="clearfix"></div>
     <%= f.input :height, input_html: { class: 'short_box', min:30 ,max: 300 } %>
     <%= f.input :width, input_html: { class: 'short_box', min:30 ,max: 300 } %><div class="clearfix"></div>
-    <%= f.association :age, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11 %>
-    <%= f.association :state, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, selected: 11 %>
+    <%= f.association :age, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, default: 11 %>
+    <%= f.association :state, input_html: { class: 'short_box' }, label_method: :description, value_method: :id, default: 11 %>
   </div>
-
   <div class="form-actions">
     <div class="clearfix"></div>
-    <%	if @item.image_url.present? && @item.height.present? && @item.width.present? %>
+    <%	if @item.image_url.present? %>
       <%= f.button :submit, class: 'btn btn-primary' %>
     <% else %>
       <%= f.button :submit, disabled: true, class: 'btn btn-primary'%>
+    <% end %>
+    <%	if @item.image_url.present? %>
+      <input type="hidden" name="item[image_url]" value="<%= @item.image_url %>">
     <% end %>
   </div>
 <% end %>
