--- a/app/views/wants/create.js.erb
+++ b/app/views/wants/create.js.erb
@@ -1,2 +1,6 @@
+<%
+  @item = Item.find @want['item_id']
+  @state = User.current.get_states([@item])[@item.id]
+%>
 $("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: @item, state: @state}}) %>").replaceAll('li[data-item-id="<%= @item.id %>"]');
 adjustModalThumbnail();
