more refactoring of item want toggle mechanism

--- a/app/views/wants/create.js.erb
+++ b/app/views/wants/create.js.erb
@@ -1,5 +1,2 @@
-<%
-  @state = User.current.get_states([@want.item])[@want.item.id]
-%>
-$("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: @want.item, state: @state}}) %>").replaceAll('li[data-item-id="<%= @want.item.id %>"]');
+$("<%= escape_javascript render(:file => 'items/_item_block', locals: {locals: {item: @want.item, state: @want.state}}) %>").replaceAll('li[data-item-id="<%= @want.item_id %>"]');
 adjustModalThumbnail();
